--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "require": {
         "php": ">= 5.3.0",
         "ext-imagick": "*",
-        "symfony/dom-crawler": "2.4.*",
-        "symfony/css-selector": "2.4.*"
+        "symfony/dom-crawler": "~2.4",
+        "symfony/css-selector": "~2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
